<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.santamaria.shakecontrolspotify.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="38dp"
        app:layout_constraintRight_toRightOf="@+id/textView5"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="38dp" />

    <Switch
        android:id="@+id/idVibrateSwith"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:checked="false"
        android:text="@string/vibrate_when_shake"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        tools:checked="false"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/idShowMessageSwitch"
        android:layout_marginEnd="13dp"
        app:layout_constraintRight_toRightOf="@+id/idShowMessageSwitch"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        android:layout_marginRight="13dp" />

    <Switch
        android:id="@+id/idShowMessageSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_action_messages"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="23dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView8"
        android:layout_marginLeft="23dp" />

    <pl.droidsonroids.gif.GifTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/giphy"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="234dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <pl.droidsonroids.gif.GifTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/giphy"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="46dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="57dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/idShowMessageSwitch" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_spotify"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="6dp"
        app:layout_constraintRight_toRightOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginRight="6dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_your_music"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toRightOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginRight="5dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_in_background_this_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shake_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="11dp"
        app:layout_constraintRight_toRightOf="@+id/textView7"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginRight="11dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/times_next_song"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="30dp"
        app:layout_constraintRight_toRightOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginRight="30dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/times_previous_song"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:visibility="invisible"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/idVibrateSwith"
        android:layout_marginLeft="22dp" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8143704440549148/7200268872"
        tools:layout_constraintBottom_creator="1"
        ads:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        ads:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"></com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
